--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DEm busca da cidade perdida</title>
 </head>
 <body>
+
+    <main>
+      <div>
+
+       <p>Aqui ficara o texto do nosso jogo</p>
+    
+    </div>
+
+    </main>
     
 </body>
 </html>
