--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEm busca da cidade perdida</title>
+    <title>Em busca da cidade perdida</title>
 </head>
 <body>
 
     <main>
-      <div>
+      <div class="passo" id="passo-0"> 
 
-       <p>Aqui ficara o texto do nosso jogo</p>
-    
+       <p> Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-lás.</p>
+     <button class= "btn-proximo data-proximo="1"> Rio de Janeiro</button>
+     <button class= "btn-proximo data-proximo="2"> Pernambuco</button>
+    </div>
+         <div class="passo" id="passo-1"> 
+
+       <p> Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
+     <button class= "btn-proximo data-proximo="3"> Rio de Janeiro</button>
+     <button class= "btn-proximo data-proximo="4"> Pernambuco</button>
     </div>
 
     </main>
